# genAI-resume-assistant

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0bf489162195_create_candidate_profile_and_resume_.py  0f9ff0d35f97_create_candidate_evidence_table.py  2badee0172d6_create_job_description_and_job_.py  3d4d3676498a_create_resume_versions_table.py  8d89a24a24df_create_applications_table.py  9f7a5a776b1f_create_resume_suggestions_table.py  b8de7e54b1de_add_embedding_column_to_candidate_.py  d14b85b9f7c1_create_match_analysis_and_requirement_.py
backend/app/: main.py
backend/app/api/: analysis.py  applications.py  evidence.py  generation.py  jobs.py  resume_versions.py  resumes.py
backend/app/core/: config.py  exceptions.py  logging.py
backend/app/db/: session.py
backend/app/llm/: base.py  ollama.py  provider.py
backend/app/models/: __init__.py  application.py  candidate.py  evidence.py  job.py  matching.py  resume.py  resume_version.py  suggestion.py
backend/app/prompts/: bullet_rewriting.md  evidence_matching.md  jd_extraction.md  resume_extraction.md
backend/app/schemas/: application.py  evidence.py  generation.py  job.py  matching.py  resume.py  resume_version.py
backend/app/services/: application_service.py  document_export_service.py  document_parser.py  embedding_service.py  evidence_service.py  jd_analyzer.py  job_persistence.py  match_analysis_service.py  matching_service.py  profile_persistence.py  resume_parser.py  (+6 more)
backend/tests/: conftest.py
(+58 files in other folders)
